--- a/notebook/Analysis_SpotifyData_Songs_Artists.ipynb
+++ b/notebook/Analysis_SpotifyData_Songs_Artists.ipynb
@@ -1647,7 +1647,7 @@
    "id": "d21426a9",
    "metadata": {},
    "source": [
-    "Analysis: 'Stan Getz' is the most listened to artist. Spotify should target more of his songs, songs from the same genre of music or at least auto-play these songs when a playlists is finished or songs are not queued. This will help me discover new songs I like, making me likely to use the app more often."
+    "Analysis: 'Stan Getz' is the most listened to artist. Spotify should target more of his songs, songs from the same genre of music or at least auto-play these songs when a playlist is finished or songs are not queued. This will help me discover new songs I like, making me likely to use the app more often."
    ]
   },
   {
